# opentelemetry-semconv-ai-repro

./: BUILD.bazel  MODULE.bazel  README.md  main.py  requirements.in  requirements.txt
